# IA-coche

./: .gitignore  .travis.yml  85.txt  CMakeLists.txt  G25.txt  G50.txt  M25.txt  M50.txt  M85.txt  P25.txt  P50.txt  P85.txt  README.md  input.txt
docs/: doc.txt
include/: Celda.hpp  Coche.hpp  Grafo.hpp  Malla.hpp  Mapa.hpp  Texturas.hpp  algoritmos.hpp  random.hpp  variables.hpp
src/: Celda.cpp  Coche.cpp  Grafo.cpp  Malla.cpp  Mapa.cpp  Texturas.cpp  algoritmos.cpp  main.cpp
test/: mytest.cpp
